View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022383 | Open CASCADE | OCCT:Modeling Algorithms | public | 2011-04-11 12:30 | 2012-03-29 17:26 |
Reporter | oan | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
OS | All | ||||
Target Version | 6.5.2 | Fixed in Version | 6.5.2 | ||
Summary | 0022383: Four and more points at least on curve | ||||
Description | There are four or more poits on a curve even it has small curvature and minimum number of points is 2. | ||||
Additional information and documentation updates | Documentation remark, added by OAN 2011-04-11 12:56:27: New features: No Improvements: Now if curve has a nonsignificant curvature, it counts as a line and two points at least are used. Changes: No Modified entities: GCPnts package: GCPnts_TangentialDeflection.gxx (GCPnts_TangentialDeflection.cdl) - small code correction | ||||
Tags | No tags attached. | ||||
Test case number | chl 937 D1 | ||||
2011-04-11 12:30
|
from_OCC21645.brep (46,276 bytes) |
2011-04-11 14:51
|
oan-OCC22383-v1.tar.gz (3,472 bytes) |
2011-04-14 13:22
|
oan-OCC22383-v2.tar.gz (3,444 bytes) |
2011-04-14 18:38
|
oan-OCC22383-v3.tar.gz (3,471 bytes) |
2011-04-19 17:32
|
oan-OCC22383-v4.tar.gz (3,468 bytes) |
2011-05-16 12:58
|
OAN-OCC22383-v5.tar.gz (15,917 bytes) |
|
22383_case.tar.gz (17,152 bytes) |
|
Dear Bugmaster, test script for this bug was attached in archive 22383_case.tar.gz |
|
Branch http://svn/svn/occt/branches/OCC22383 has been merged with trunk |
|
Reviewed, no comments. |
|
Dear MIV, Please consider |
|
Dear BugMaster, Workbench KAS:dev:mkv-OCC22383-occt has been created from SVN branch http://svn/svn/occt/branches/OCC22383 (and mkv-OCC22383-products from trunk) and compiled on Linux platform. There are folloving differences in mkv-OCC22383-products regarding to KAS:dev:products-12092011-opt chl 910 J1 chl 918 L9 M1 M2 chl 928 Z2 chl 934 A4 chl 913 K4 chl 922 I2 I3 R9 chl 929 D1 D2 D5 D6 D8 chl 936 O6 Y6 msh 002 D7 msh 002 B1 msh 004 A3 msh 001 D7 O2 T3 msh 001 B1 C6 T4 msh 002 C6 T3 T4 shd 001 B1 B4 K8 K9 L8 N8 O5 R5 T1 T7 shd 002 A2 C6 C7 shd 003 A3 A8 B5 Could you please validate this new behaviour of test. See results in /dn45/occttests/results/KAS/dev/mkv-OCC22383-products_16092011/lin See reference results in /dn45/occttests/results/KAS/dev/products-20110909-opt_12092011/lin See test cases in /dn45/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Dear OAN, special attention for following tests: chl 922 R9 chl 929 D1 D2 D5 D6 D8 msh 001 D7 C6 msh 002 C6 shd 001 L8 |
|
Dear MIV, !!!!!!!!!!!!! recommended for reading !!!!!!!!!!!!!!!!! Please provide (where possible) additional command "triepoints" in catch block in test scripts where perform a checking of triangulation of simple 2d objects or single faces (such as chl 910 J1, ...). This command displays the discretization points on edges. In addition I think it's better to display triangles of these shapes (where the 2D axo viewer is used). Also please provide printing for info about triangulation. This actions can provide more clearly sense and fastest considering of problems. Ok, expected behaviour - change reference values and provide info about triangulation in the following test scripts (where necessary): chl 910 J1 chl 918 L9 M1 M2 chl 928 Z2 chl 934 A4 chl 913 K4 chl 922 I2 I3 chl 936 O6 Y6 msh 002 D7 msh 002 B1 msh 004 A3 msh 001 D7 O2 T3 - As I can consider T3 is improvement - please see OCC22699 and trace results for this bug!!! msh 001 B1 T4 msh 002 T3 T4 shd 001 B1 B4 K8 K9 L8 N8 O5 R5 T1 T7 shd 002 A2 C6 C7 shd 003 A3 A8 B5 shd 001 B4 chl 922 R9 - change of deflection, please provide info about triangulation in this test script chl 929 D1 D2 D5 D6 D8 - see above shd 001 L8, N8, ... - changing of deflection - Ok Total: Ok |
|
Please integrate |
|
PDN, It is necessary to merge src/BRepMesh/BRepMesh_FastDiscret.cxx in http://svn/svn/occt/branches/OCC22383 branch with trunk after integration of 0022313: Bug in shading mode with attached shape to the latter. |
|
Dear Bugmaster, branch http://svn/svn/occt/branches/OCC22383 was updated -> there are no changes of BRepMesh_FastDiscret in this fix and it was copied from trunk. |
|
Integration into trunk of occt repository Date: 2011-09-22 11:43:08 +0400 (Thu, 22 Sep 2011) New Revision: 9095 Modified: trunk/src/BRepMesh/BRepMesh_FastDiscretFace.cxx trunk/src/GCPnts/GCPnts_TangentialDeflection.gxx |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-04-11 12:31 | oan | CC | => pdn |
2011-04-11 13:03 | bugmaster | Assigned To | bugmaster => oan |
2011-04-11 13:03 | bugmaster | Status | new => assigned |
2011-04-11 15:02 | oan | Status | assigned => resolved |
2011-04-14 10:26 | oan | BugsThisDependsOn | => 22318 |
2011-04-27 19:55 |
|
Status | resolved => assigned |
2011-04-28 12:12 | oan | BugsThisDependsOn | => 22302 |
2011-05-16 15:08 | oan | Status | assigned => resolved |
2011-07-07 14:23 | bugmaster | Status | resolved => assigned |
2011-07-07 14:28 | oan | BugsThisDependsOn | 22302 => |
2011-07-12 14:46 | oan | Status | assigned => resolved |
2011-07-13 18:23 |
|
Status | resolved => assigned |
2011-08-01 10:46 | oan | File Added: 22383_case.tar.gz | |
2011-08-01 10:47 | oan | Note Added: 0017863 | |
2011-08-02 11:31 | bugmaster | Category | OCCT:MOA => OCCT:Modeling Algorithms |
2011-08-03 12:14 | bugmaster | Fixed in Version | EMPTY => |
2011-08-03 12:14 | bugmaster | Target Version | => 6.5.2 |
2011-08-03 12:14 | bugmaster | Description Updated | |
2011-08-03 12:14 | bugmaster | Additional Information Updated | |
2011-08-03 16:20 |
|
Test case number | => chl 937 D1 |
2011-09-15 15:30 | oan | Note Added: 0018169 | |
2011-09-15 15:40 | oan | Assigned To | oan => pdn |
2011-09-15 16:11 |
|
Note Added: 0018171 | |
2011-09-15 16:11 |
|
Status | assigned => reviewed |
2011-09-15 16:12 |
|
Assigned To | pdn => mkv |
2011-09-15 16:13 |
|
Note Added: 0018172 | |
2011-09-20 12:14 |
|
Note Added: 0018211 | |
2011-09-20 12:34 |
|
Note Added: 0018212 | |
2011-09-20 12:35 |
|
Assigned To | mkv => oan |
2011-09-20 12:35 |
|
Status | reviewed => assigned |
2011-09-20 14:48 | oan | Note Added: 0018217 | |
2011-09-20 14:51 | oan | Relationship added | related to 0022699 |
2011-09-20 17:44 | oan | Status | assigned => reviewed |
2011-09-21 09:53 |
|
Assigned To | oan => mkv |
2011-09-21 09:54 |
|
Note Added: 0018232 | |
2011-09-21 18:20 | bugmaster | Note Added: 0018256 | |
2011-09-22 10:47 | oan | Note Added: 0018257 | |
2011-09-22 11:53 | bugmaster | Note Added: 0018260 | |
2011-09-22 11:53 | bugmaster | Status | reviewed => verified |
2011-09-22 11:53 | bugmaster | Resolution | open => fixed |
2011-12-26 17:45 |
|
Additional Information Updated | |
2011-12-26 17:56 |
|
Note Edited: 0018172 | |
2011-12-26 17:56 |
|
Note Edited: 0018212 | |
2011-12-26 17:57 |
|
Note Edited: 0018217 | |
2011-12-26 18:04 |
|
Note Edited: 0018256 | |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master 4071d9e6 |