0022383: Four and more points at least on curve